big buttons and wip feedback colors

--- a/docs/components/buttons.html
+++ b/docs/components/buttons.html
@@ -775,6 +775,12 @@
   <button type="button" class="btn btn-primary plein lg-padding">lg-padding</button>
 </div>
 
+<p><code class="highlighter-rouge">.btn-lg</code>,<code class="highlighter-rouge">.btn-xl</code>: Change button size</p>
+<div class="balmoral-demo code-example">
+<button type="button" class="btn btn-primary plein btn-lg">Large button</button><br /><br />
+ <button type="button" class="btn btn-primary plein btn-xl">XL Button</button>
+</div>
+
 <h2 id="usage">Usage</h2>
 
 <p>Ground rules in choosing the type of button to use.</p>
