--- a/assets/css/just-the-docs.css
+++ b/assets/css/just-the-docs.css
@@ -5945,6 +5945,7 @@ html body .balmoral-demo {
   /*Barre de partage*/
   /*Page sans menu*/
   /*Tabs exemple dans la page film*/
+  /*List on tags */
   /**
    * Standalone styles for vignette/card used in carousel.
    * Does not assume any sizing, containers, DOM hierarchy, etc.
@@ -11969,7 +11970,7 @@ html body .balmoral-demo {
   html body .balmoral-demo .copy ul {
     list-style-type: disc; }
   html body .balmoral-demo .copy a {
-    color: #007CBD; }
+    color: #006499; }
   html body .balmoral-demo .copy a:hover {
     text-decoration: underline; }
   html body .balmoral-demo .copy ul ul {
@@ -13341,6 +13342,22 @@ html body .balmoral-demo {
     background-color: transparent; }
   html body .balmoral-demo .m-load-more {
     position: relative; }
+  html body .balmoral-demo .m-load-more .moreLink {
+    width: 150px;
+    display: block;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    text-align: center;
+    white-space: normal;
+    color: #6b6a69; }
+  html body .balmoral-demo .m-load-more .moreLink:hover {
+    color: #0085CA; }
   html body .balmoral-demo .m-load-more .plusLink {
     width: 100px;
     height: 100px;
@@ -13361,6 +13378,8 @@ html body .balmoral-demo {
     visibility: hidden;
     margin: 0 auto;
     display: block; }
+  html body .balmoral-demo .m-load-more.loading .moreLink {
+    display: none; }
   html body .balmoral-demo .m-load-more.loading .plusLink {
     display: none; }
   html body .balmoral-demo .m-load-more.loading .m-svgLoading {
@@ -18052,6 +18071,13 @@ html body .balmoral-demo {
     -moz-transition: all 0s;
     -o-transition: all 0s;
     transition: all 0s; }
+  html body .balmoral-demo .m-listing.listing--sans-serif li {
+    font-family: "Ciutadella-Medium", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
+  html body .balmoral-demo .m-listing.listing--sans-serif a {
+    color: #006499; }
+  html body .balmoral-demo .m-listing.listing--sans-serif a:hover {
+    color: #0085CA;
+    text-decoration: underline; }
   html body .balmoral-demo .csscolumns .m-listing {
     -webkit-column-count: 1;
     -moz-column-count: 1;
@@ -18905,7 +18931,7 @@ html body .balmoral-demo {
   html body .balmoral-demo .m-standalone-page a:not(.btn) {
     color: #FF5C39; }
   html body .balmoral-demo .m-standalone-page a:not(.btn):hover {
-    color: #007CBD; }
+    color: #006499; }
   html body .balmoral-demo .m-standalone-page .dropdown-menu > li > a {
     color: #000; }
   html body .balmoral-demo .m-standalone-page + #l-mainPageContent {
@@ -19071,6 +19097,41 @@ html body .balmoral-demo {
     html body .balmoral-demo .m-tabs > ul li,
     html body .balmoral-demo .m-tabs > ul a {
       width: auto; } }
+  html body .balmoral-demo .m-taglist {
+    font-family: "Ciutadella-Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    color: #6b6a69;
+    display: inline; }
+  html body .balmoral-demo .m-taglist dl {
+    margin: 0px;
+    padding-top: 1em;
+    font-size: 1rem; }
+  html body .balmoral-demo .m-taglist li,
+  html body .balmoral-demo .m-taglist dd,
+  html body .balmoral-demo .m-taglist dt {
+    display: inline;
+    line-height: 2.5rem; }
+  html body .balmoral-demo .m-taglist li:after,
+  html body .balmoral-demo .m-taglist dd:after {
+    content: "|";
+    color: #c0bfbe;
+    position: relative;
+    padding-right: 0.375rem;
+    padding-left: 0.375rem; }
+  html body .balmoral-demo .m-taglist li:last-child:after {
+    display: none; }
+  html body .balmoral-demo .m-taglist dd.noSeparator:after {
+    opacity: 0; }
+  html body .balmoral-demo .m-taglist dt {
+    font-style: italic;
+    font-weight: normal; }
+  html body .balmoral-demo .m-taglist dt:after {
+    content: "\A";
+    white-space: pre; }
+  html body .balmoral-demo .m-taglist a {
+    color: #006499; }
+  html body .balmoral-demo .m-taglist a:hover {
+    color: #0085CA;
+    text-decoration: underline; }
   html body .balmoral-demo .m-tiles-container {
     display: flex;
     flex-wrap: wrap; }
@@ -20181,7 +20242,7 @@ html body .balmoral-demo {
     margin-left: 12px; }
   html body .balmoral-demo #home_edu_page #library-resources a span {
     font-family: "Ciutadella-Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    color: #007CBD;
+    color: #006499;
     text-decoration: underline;
     margin-left: 5px; }
   html body .balmoral-demo #home_edu_page .campus-promo-box {
@@ -20837,8 +20898,9 @@ html body .balmoral-demo {
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .playlist-insert h6 small {
     line-height: 1.5rem; }
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .playlist-insert a {
-    color: #0085CA; }
+    color: #006499; }
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .playlist-insert a:hover {
+    color: #0085CA;
     text-decoration: underline; }
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .playlist-insert span {
     text-transform: initial;
@@ -21001,8 +21063,9 @@ html body .balmoral-demo {
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .infosFilm .creator {
     font-size: 1rem; }
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .infosFilm .creator a {
-    color: #0085CA; }
+    color: #006499; }
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .infosFilm .creator a:hover {
+    color: #0085CA;
     text-decoration: underline; }
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .infosFilm .filmIcons > span {
     vertical-align: middle; }
@@ -21099,10 +21162,10 @@ html body .balmoral-demo {
     text-transform: uppercase; }
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .permanentTransactionConfirmation a {
     display: block;
-    color: #0085CA;
+    color: #006499;
     text-transform: none; }
   html body .balmoral-demo .film-page #l-mainPageContent #filmContent .permanentTransactionConfirmation a:hover {
-    color: #000; }
+    color: #0085CA; }
   html body .balmoral-demo .film-page #l-mainPageContent #shareFilm {
     padding: 1rem 0; }
   html body .balmoral-demo .film-page #l-mainPageContent #shareFilm li {
@@ -21276,47 +21339,6 @@ html body .balmoral-demo {
     hyphenate-limit-zone: 8%; }
   html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .l-largeur80p {
     padding: 1.5rem 0 1.5rem 0; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToContent dl {
-    margin: 0px;
-    padding-top: 1em;
-    font-size: 1rem; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToContent dd,
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToContent dt {
-    display: inline; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToContent dd:after {
-    content: "|";
-    color: #c0bfbe;
-    position: relative;
-    font-size: 1.2em;
-    padding-left: 0.375rem; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToContent dd.noSeparator:after {
-    opacity: 0; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToContent dt {
-    font-style: italic;
-    font-weight: normal; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToContent dt a {
-    color: #6b6a69; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToContent dt a:hover {
-    color: #8e8c8a; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToContent dt:after {
-    content: "\A";
-    white-space: pre; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToOneLine {
-    text-transform: uppercase;
-    color: #6b6a69; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToOneLine ul {
-    display: inline; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToOneLine li {
-    display: inline; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToOneLine li:after {
-    content: "  |  "; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToOneLine li:last-child:after {
-    display: none; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToOneLine a {
-    color: #000;
-    text-decoration: underline; }
-  html body .balmoral-demo .film-page #l-mainPageContent .relatedTo .relatedToOneLine a:hover {
-    color: #0085CA; }
   html body .balmoral-demo .film-page #l-mainPageContent .recommandations h4 {
     font-size: 1.1667rem;
     text-transform: uppercase; }
